added xml reader and writer and extended filter functionality to filter by xpath.

--- a/collector/src/main/resources/output_file_names.properties
+++ b/collector/src/main/resources/output_file_names.properties
@@ -1,4 +1,8 @@
-german.airlines=output/germanAirlines.csv
-russian.airlines=output/russianAirlines.csv
-turkish.airlines=output/turkishAirlines.csv
-usa.airlines=output/usaAirlines.csv
+#german.airlines=output/germanAirlines.csv
+#russian.airlines=output/russianAirlines.csv
+#turkish.airlines=output/turkishAirlines.csv
+#usa.airlines=output/usaAirlines.csv
+german.airlines=output/germanAirlines.xml
+russian.airlines=output/russianAirlines.xml
+turkish.airlines=output/turkishAirlines.xml
+usa.airlines=output/usaAirlines.xml
